    sure the stick is unmounted. Closes: #660776.
  * Rename kbd-chooser component to console-setup.
  * Fix preseeding for keyboard-configuration.
  * Simply use cp instead of dd to prepare USB stick.
  * Remove heading / from pxelinux.0, it seems to pose problem with some
    implementations. Thanks Ulrich Krause for the report.

  [ Steve McIntyre ]
  * Make it clearer how we expect users to write CDs to USB sticks.

  [ Joey Hess ]
  * Fix typo in example preseed. Closes: #612631

  [ Didier Raboud ]
  * Document win32-loader as a possible boot method. Closes: #444017.

  [ Colin Watson ]
  * The text frontend is available on most default install media.  Adjust
    the Boot Parameters section to say so.
  * Update url-us-keymap.  Thanks, Manfred Hampl; LP: #741134.
  * Document log_host and log_port.
  * Update link to installer/doc/devel/ to cope with the switch to git.

  [ Christian Perrier ]
  * Document preseed-md5 and keymap preseed aliases
    Closes: #621825, #621824
  * Add VCS-Browser to debian/control. Closes: #636937

  [ Martin Michlmayr ]
  * Update list of supported ARM devices.

  [ Miguel Figueiredo ]
  * Fix chroot install keyboard configuration. Closes: #634168.

  [ Julian Andres Klode ]
  * Use C.UTF-8 locale for chroot install. Closes: #634167.

  [ Joey Hess ]
  * Remove dead link to Phoenix large disk BIOS faq. Closes: #638268
  * Add a pointer to the unofficial non-free CDs with firmware.
  * 1 gb USB key now needed for hd-media. Closes: #666090

  [ Vincent McIntyre ]
  * Mention DEBCONF_DEBUG. Closes: #668572.

  [ Milan Kupcevic ]
  * Clarify how to boot PowerMacs from external Firewire and internal
    factory default CD/DVD drives. Closes #378119.
  * Document how to boot Pegasos II from factory default CD/DVD drive.

 -- Milan Kupcevic <milan@physics.harvard.edu>  Sat, 30 Jun 2012 17:12:20 -0400

installation-guide (20110122) unstable; urgency=low

  [ Frans Pop ]