@@ -257,9 +257,10 @@ or <command>LILO</command>.
 Let's assume you have prepared everything from <xref
 linkend="boot-dev-select"/> and <xref linkend="boot-usb-files"/>.  Now
 just plug your USB stick into some free USB connector and reboot the
-computer.  The system should boot up, and you should be presented with
-the <prompt>boot:</prompt> prompt.  Here you can enter optional boot
-arguments, or just hit &enterkey;.
+computer.  The system should boot up, and unless you have used the flexible
+way to build the stick and not enabled it, you should be presented with the
+<prompt>boot:</prompt> prompt.  Here you can enter optional boot arguments, or
+just hit &enterkey;.
 
 </para>
   </sect2>
