@@ -29,6 +29,10 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Simply use cp instead of dd to prepare USB stick.
   * Remove heading / from pxelinux.0, it seems to pose problem with some
     implementations. Thanks Ulrich Krause for the report.
+  * Document that flexible-built USB keys do not show the boot menu by
+    default, and document how to enable it. Thanks Filipus Klutiero for the
+    report. Closes: #666105.
+  * Document that installing an MBR is needed to get a bootable USB key.
 
   [ Steve McIntyre ]
   * Make it clearer how we expect users to write CDs to USB sticks.
